change path name

--- a/mediapipe_recalculate_keypoints_normalization.ipynb
+++ b/mediapipe_recalculate_keypoints_normalization.ipynb
@@ -221,13 +221,13 @@
     "import glob\n",
     "import os\n",
     "import json\n",
-    "data_save_path = \"./ok\"\n",
+    "data_save_path = \"./saved_data\"\n",
     "if not os.path.exists(data_save_path):\n",
     "    os.makedirs(data_save_path)\n",
     "\n",
     "label_index = 0\n",
     "bad_video = []\n",
-    "for i in glob.glob(\"./2-15-2023/*\"):\n",
+    "for i in glob.glob(\"./your_video_data/*\"):\n",
     "    vid_dir = os.path.join(i, \"*.mp4\")\n",
     "    file_index = 0\n",
     "    for j in glob.glob(vid_dir):\n",
